(4.2.4p7-RC1) 2009/03/30 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1131] UDP sockets should not use SIGPOLL on Solaris.
* build system email address cleanup
* [Bug 774] parsesolaris.c does not compile under the new Solaris
* [Bug 873] Windows serial refclock proper TTY line discipline emulation
* [Bug 1014] Enable building with VC9 (in Visual Studio 2008,
  Visual C++ 2008, or SDK)
* [Bug 1117] Deferred interface binding under Windows works only correctly
  if FORCE_DNSRETRY is defined
* [BUG 1124] Lock QueryPerformanceCounter() client threads to same CPU
* DPRINTF macro made safer, always evaluates to a statement and will not
  misassociate an else which follows the macro.

---
(4.2.4p6) 2009/01/08 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1113] Fixed build errors with recent versions of openSSL. 
* [Sec 1111] Fix incorrect check of EVP_VerifyFinal()'s return value.
* Update the copyright year.

---
(4.2.4p5) 2008/08/17 Released by Harlan Stenn <stenn@ntp.org>

* [BUG 1051] Month off by one in leap second message written to clockstats
  file fixed.
* [Bug 450] Windows only: Under original Windows NT we must not discard the
  wildcard socket to workaround a bug in NT's getsockname().
* [Bug 1038] Built-in getpass() function also prompts for password if
  not built with DEBUG.
* [Bug 841] Obsolete the "dynamic" keyword and make deferred binding
  to local interfaces the default.
  Emit a warning if that keyword is used for configuration.
* [Bug 959] Refclock on Windows not properly releasing recvbuffs.
* [Bug 993] Fix memory leak when fetching system messages.
* [Bug 987] Wake up the resolver thread/process when a new interface has
  become available.
* Correctly apply negative-sawtooth for oncore 12 channel receiver.
* Startup code for original LinuxPPS removed.  LinuxPPS now conforms to
  the PPSAPI.
* [Bug 1000] allow implicit receive buffer allocation for Windows.
  fixes startup for windows systems with many interfaces.